Produzione/force-app/main/default/objects/Utente_Gruppo__c/fields/Area_Ruolo__c.field-meta.xml
<CustomField>
    <fullName>Area_Ruolo__c</fullName>
    <description>Area ruolo di competenza</description>
    <inlineHelpText>Area ruolo di competenza</inlineHelpText>
    <label>Area Ruolo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area_Permessi_Visualizzazione</valueSetName>
    </valueSet>
</CustomField>