Produzione/force-app/main/default/objects/Utente_Gruppo__c/fields/Gruppo__c.field-meta.xml
<CustomField>
    <fullName>Gruppo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gruppo</label>
    <referenceTo>Gruppo__c</referenceTo>
    <relationshipLabel>Utenti Gruppi</relationshipLabel>
    <relationshipName>Utenti_Gruppi</relationshipName>
    <type>Lookup</type>
</CustomField>