Produzione/force-app/main/default/objects/Utente_Gruppo__c/fields/Marchio__c.field-meta.xml
<CustomField>
    <fullName>Marchio__c</fullName>
    <formula>CASE(Gruppo__r.Tipologia__c,
&quot;Zona&quot;,Gruppo__r.Genitore__r.Genitore__r.Name,
&quot;Distretto&quot;,Gruppo__r.Genitore__r.Name,
&quot;Marchio&quot;,Gruppo__r.Name,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marchio</label>
    <type>Text</type>
</CustomField>