Produzione/force-app/main/default/objects/Utente_Gruppo__c/fields/Sigla_Gruppo__c.field-meta.xml
<CustomField>
    <fullName>Sigla_Gruppo__c</fullName>
    <formula>Gruppo__r.Sigla__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sigla Gruppo</label>
    <type>Text</type>
</CustomField>