Produzione/force-app/main/default/objects/Utente_Gruppo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area_Permessi_Visualizzazione__c</columns>
    <columns>Area_Ruolo__c</columns>
    <columns>Gruppo__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Nome_Gruppo__c</columns>
    <columns>Privilegi__c</columns>
    <columns>Sigla_Gruppo__c</columns>
    <columns>Tipologia_Gruppo__c</columns>
    <columns>Utente__c</columns>
    <columns>Marchio__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>